# handlebars-cli-rs

./: .gitignore  Cargo.toml
src/: helpers.rs  main.rs
