[package]
name = "handlebars-cli-rs"
version = "0.1.0"
authors = ["Valentin Roland <valentin@vroland.de>"]

[features]
mediawiki = ["mwparser_utils"]

[dependencies]
structopt = "0.2"
handlebars = "1.0"
serde = "1.0"
serde_json = "1.0"
serde_yaml = "0.8"

mwparser_utils = { git = "https://github.com/vroland/mediawiki-parser-utils.git" , optional = true}
